refact: pages and components

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-dom": "^16.9.10",
     "@types/react-router": "^5.1.11",
     "@types/react-router-dom": "^5.1.7",
+    "axios": "^0.21.1",
     "framer-motion": "^4.1.17",
     "ionicons": "^5.4.0",
     "react": "^17.0.1",
