--- a/package.json
+++ b/package.json
@@ -2,18 +2,17 @@
   "name": "ionic_carpediem",
   "version": "0.0.1",
   "private": true,
-  "dependencies": {
-    "@ionic/react": "^5.5.0",
-    "@ionic/react-router": "^5.5.0",
-    "@testing-library/jest-dom": "^5.11.9",
-    "@testing-library/react": "^11.2.5",
-    "@testing-library/user-event": "^12.6.3",
-    "@types/jest": "^26.0.20",
+  "devDependencies": {
     "@types/node": "^12.19.15",
     "@types/react": "^16.14.3",
     "@types/react-dom": "^16.9.10",
     "@types/react-router": "^5.1.11",
     "@types/react-router-dom": "^5.1.7",
+    "typescript": "^4.1.3"
+  },
+  "dependencies": {
+    "@ionic/react": "^5.5.0",
+    "@ionic/react-router": "^5.5.0",
     "axios": "^0.21.1",
     "framer-motion": "^4.1.17",
     "ionicons": "^5.4.0",
@@ -25,7 +24,6 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
     "sass": "^1.38.2",
-    "typescript": "^4.1.3",
     "web-vitals": "^0.2.4",
     "workbox-background-sync": "^5.1.4",
     "workbox-broadcast-update": "^5.1.4",
