feat: add rc-slider and turn player dinamic

--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "axios": "^0.21.1",
     "framer-motion": "^4.1.17",
     "ionicons": "^5.4.0",
+    "rc-slider": "^9.7.2",
     "react": "^17.0.1",
+    "react-circular-progressbar": "^2.0.4",
     "react-dom": "^17.0.1",
     "react-icons": "^4.2.0",
     "react-loading": "^2.0.3",
