--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "typescript": "^4.1.3"
   },
   "dependencies": {
+    "@ionic-native/social-sharing": "^5.36.0",
     "@ionic/react": "^5.5.0",
     "@ionic/react-router": "^5.5.0",
     "@ionic/storage": "^3.0.6",
     "axios": "^0.21.1",
+    "cordova-plugin-x-socialsharing": "^6.0.3",
     "framer-motion": "^4.1.17",
     "ionicons": "^5.4.0",
     "rc-slider": "^9.7.2",
