--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "devDependencies": {
+    "@capacitor/cli": "3.2.2",
     "@types/node": "^12.19.15",
     "@types/react": "^16.14.3",
     "@types/react-dom": "^16.9.10",
@@ -11,12 +12,11 @@
     "typescript": "^4.1.3"
   },
   "dependencies": {
-    "@ionic-native/social-sharing": "^5.36.0",
+    "@capacitor/core": "3.2.2",
     "@ionic/react": "^5.5.0",
     "@ionic/react-router": "^5.5.0",
     "@ionic/storage": "^3.0.6",
     "axios": "^0.21.1",
-    "cordova-plugin-x-socialsharing": "^6.0.3",
     "framer-motion": "^4.1.17",
     "ionicons": "^5.4.0",
     "rc-slider": "^9.7.2",
