--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "0.0.1",
   "private": true,
   "devDependencies": {
-    "@capacitor/cli": "3.2.2",
     "@types/node": "^12.19.15",
     "@types/react": "^16.14.3",
     "@types/react-dom": "^16.9.10",
@@ -12,6 +11,8 @@
     "typescript": "^4.1.3"
   },
   "dependencies": {
+    "@capacitor/android": "^3.2.3",
+    "@capacitor/cli": "3.2.2",
     "@capacitor/core": "3.2.2",
     "@ionic/react": "^5.5.0",
     "@ionic/react-router": "^5.5.0",
