--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@capacitor/android": "^3.2.3",
     "@capacitor/cli": "3.2.2",
     "@capacitor/core": "3.2.2",
+    "@capacitor/status-bar": "^1.0.3",
     "@ionic/react": "^5.5.0",
     "@ionic/react-router": "^5.5.0",
     "@ionic/storage": "^3.0.6",
